# HITSZ-zdh-

./: README.md
信号实验/实验一/: all_src.txt  第一问.txt  第三问.txt  第二问_第2种解法（实验验收的是这个）.txt  第二问_第一种解法.txt  第二问第3种解法.txt
信号实验/实验三/: all_src.txt  实验三.doc  第一问.txt  第三问.txt  第二问.txt  第四问.txt
信号实验/实验二/: all_src.txt  实验二.doc  第一问.txt  第二问.txt
信号实验/实验四/: all_src.txt  实验四.doc  第一问.txt  第三问.txt  第二问.txt
数图/: Homework1.docx  Homework2.docx  Homework3.docx  Homework4.docx  homework5.docx  homework7.docx  homework8.docx  shutu.txt  shutu4.txt  shutu5.txt  数字图像处理课设报告.docx
数图/课设/: CMakeLists.txt  package.xml
数图/课设/src/: demo.cpp  exp4.cpp
系统建模/: excp1.fig  exp1.fig  第二次上机实验报告 .doc
系统建模/作业/: exp2.slx  作业.doc
系统建模/作业1/: untitled.m  系统建模.doc
系统建模/作业2/: 1.doc  hom2.m
系统建模/作业3/: 1.doc  hom5.m
系统建模/实验3/: exp3.m  第三次上机实验报告 .doc
自控理论/: 自控A实验2报告2022.docx
